syntax = "proto3";

package pb;

option go_package = "/vote/rpc/pb";

message VoteReq {
  string name = 2;
  int32 term = 3;
  int32 vote = 4;
  string state = 5;
  string ip = 6;
  repeated string opList = 7;
}

message VoteRes {
  string name = 2;
  int32 term = 3;
  int32 vote = 4;
  string state = 5;
  string ip = 6;
}

service Vote {
  rpc SendVote(VoteReq) returns (VoteRes);
  rpc ChangeStateSlave(VoteReq) returns (VoteRes);
}